--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Answer the following questions"/>
+        android:text="Answer the following questions"
+        android:paddingBottom="16dp"/>
     <TextView
         android:id="@+id/Q1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Question 1"
+        android:text="@string/Q1_statement"
         android:paddingTop="16dp"/>
     <LinearLayout
         android:id="@+id/Q1_options"
@@ -35,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="16dp"
-                android:text="A" />
+                android:text="@string/Q1_checkbox_A" />
         </LinearLayout>
 
         <LinearLayout
@@ -53,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="16dp"
-                android:text="B" />
+                android:text="@string/Q1_checkbox_B" />
         </LinearLayout>
 
         <LinearLayout
@@ -71,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="16dp"
-                android:text="C" />
+                android:text="@string/Q1_checkbox_C" />
         </LinearLayout>
 
         <LinearLayout
@@ -89,7 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="16dp"
-                android:text="D" />
+                android:text="@string/Q1_checkbox_D" />
         </LinearLayout>
     </LinearLayout>
 
@@ -98,7 +99,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
-        android:text="Question 2"
+        android:text="@string/Q2_statement"
         android:layout_below="@+id/Q1_options"/>
     <EditText
         android:id="@+id/Q2_answer_textfield"
@@ -112,7 +113,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
-        android:text="Question 3"
+        android:text="@string/Q3_statement"
         android:layout_below="@+id/Q2_answer_textfield"/>
     <RadioGroup
         android:id="@+id/Q3_radio_button"
@@ -138,7 +139,17 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
     android:text="Submit"
+    android:onClick="submitAnswers"
     android:layout_alignParentBottom="true"
     android:layout_centerHorizontal="true"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="reset"
+        android:onClick="resetQuiz"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"/>
 
 </RelativeLayout>
